不要な部分を消しました

--- a/What_is_this_insect_application/app/src/main/res/values/themes.xml
+++ b/What_is_this_insect_application/app/src/main/res/values/themes.xml
@@ -13,7 +13,7 @@
        ~ See the License for the specific language governing permissions and
        ~ limitations under the License.
 -->
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.GestureRecognizer" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
