--- a/What_is_this_insect_application/app/src/main/res/layout/activity_introduce.xml
+++ b/What_is_this_insect_application/app/src/main/res/layout/activity_introduce.xml
@@ -45,7 +45,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:breakStrategy="simple"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
@@ -76,7 +76,7 @@
         android:id="@+id/textView1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
