--- a/What_is_this_insect_application/app/src/main/res/menu/menu_introduce.xml
+++ b/What_is_this_insect_application/app/src/main/res/menu/menu_introduce.xml
@@ -6,4 +6,9 @@
         android:title="@string/gotoMain"
         android:icon="@android:drawable/ic_menu_send"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_go_to_help"
+        android:title="@string/gotoHelpAct"
+        android:icon="@android:drawable/ic_menu_help"
+        app:showAsAction="ifRoom" />
 </menu>
